Sun Apr 29 03:30:12 2001  George Lebl <jirka@5z.com>

	* extern.c: cut down the "loading applet" icon to 14x14 since 18
	  was still too big for drivemounts.

Thu Apr 26 16:30:33 2001  George Lebl <jirka@5z.com>

	* menu.c: fix a typo

Tue Apr 24 19:09:55 2001  George Lebl <jirka@5z.com>

	* Applying some of the ximian patches

	* menu-fentry.c:  in fr_is_subdir, check for nullity or
	  emptiness of the superdir

	* foobar-widget.c, tasklist_icon.c:  Shade iconified tasks in
	  the foobar tasklist

	* menu.c:  Add "Edit menus..." item to the "Panel" menu

	* menu-fentry.[ch], menu.c:  Allow a "Separator" .desktop type
	  to properly read the ximian menus apparently

	* menu.c:  Use gnome/apps rather then gnome/apps/ for adding
	  menus to panel

Tue Apr 24 13:55:29 2001  George Lebl <jirka@5z.com>

	* session.c: If we can find an installed mozilla desktop file,
	  then use it for the default config.  Only if we fail use the
	  Netscape.desktop, which will by default launch mozilla anyway,
	  but has a tendency to confuse RMS.  Which reminds me the
	  Netscape.desktop.

Tue Apr 24 13:41:08 2001  George Lebl <jirka@5z.com>

	* session.c:  Most people hate the lock/logout buttons for their
	  uselessness.  So in the default config I replaced it with the
	  most useful applet of them all.  Fish.

Sun Apr 22 21:59:04 2001  George Lebl <jirka@5z.com>

	* extern.[ch]:  When an applet doesn't want session saving, don't
	  bother trying to restart it.

	* extern.[ch], session.c, panel.c, menu.c, launcher.c, applet.c:
	  Save last location for a goad_id, and if an applet was started
	  without specifying a position, then use this one.  This makes say
	  the xchat applet always show up at the same place.  It also
	  makes re-adding applets smarter.

Sun Apr 22 20:13:03 2001  George Lebl <jirka@5z.com>

	* applet-widget.c:  be clearer in applet_widget_init function docs

	* basep-widget.c:  when leave happens remove the entry timeout and