@@ -1,3 +1,14 @@
+Thu May 03 00:08:22 2001  George Lebl <jirka@5z.com>
+
+	* aligned-widget.c: dragging an aligned widget around an offset
+	  screen now works
+
+	* basep-widget.[ch]: add a screen_change signal
+
+	* border-widget.c: minor cleanup
+
+	* menu-fentry.c: fix a warning
+
 Sun Apr 29 03:30:12 2001  George Lebl <jirka@5z.com>
 
 	* extern.c: cut down the "loading applet" icon to 14x14 since 18
